2001-01-24  Mike Fleming  <mfleming@eazel.com>

	reviewed by: <robey@eazel.com>

	User-Agent Changes for PR3

		"Trilobite/" --> "Trilobite/0.2.0"
		"Nautilus/1.0" (in the Mozilla User-Agent) --> "Nautilus/1.0PR3"

	* components/mozilla/nautilus-mozilla-content-view.c:
	(mozilla_content_view_one_time_happenings):
	* components/services/install/lib/eazel-install-protocols.c:
	(http_fetch_remote_file),
	(eazel_install_fetch_definitive_package_info):
	* components/services/install/lib/eazel-softcat.c:
	(eazel_softcat_get_info):
	* components/services/inventory/eazel-inventory-service.c:
	(impl_Trilobite_Eazel_Inventory_upload):
	* components/services/trilobite/libtrilobite/Makefile.am:
	* components/services/trilobite/libtrilobite/trilobite-core-network
	-slim.c: (trilobite_fetch_uri):
	* components/services/trilobite/libtrilobite/trilobite-core-network
	.c: (trilobite_open_uri):
	* components/services/trilobite/libtrilobite/trilobite-core-utils.c
	: (trilobite_get_useragent_string):
	* components/services/trilobite/libtrilobite/trilobite-core-utils.h
	:

2001-01-24  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Eskil Olsen  <eskil@eazel.com>

	* Makefile.am:
	Add Makefile.shared to EXTRA_DIST.
	
2001-01-24  Robey Pointer  <robey@eazel.com>

	* components/services/install/nautilus-view/nautilus-service-instal
	l-view.c: (install_message_new), (generate_install_form),
	(nautilus_service_install_downloading),
	(nautilus_service_install_preflight_check),
	(nautilus_service_install_download_failed),
	(nautilus_service_install_done), (nautilus_service_install_failed),
	(nautilus_service_install_view_update_from_uri),
	(nautilus_service_install_view_load_uri),
	(service_install_stop_loading_callback):

	Turn off annoying cylon when the throbber is sufficient.  Use
	Nautilus viewport instead of GTK one, so that the redraw is
	correct for AA labels (yay!).  Set cancelled flag immediately on
	getting the stop signal, so we can abort preflight if it was hit
	that early.
