@@ -1,3 +1,11 @@
+2001-01-24  Andy Hertzfeld  <andy@eazel.com>
+
+	reviewed by: John Sullivan <sullivan@eazel.com>
+
+	* src/nautilus-window-menus.c: (get_static_bookmarks_file_path):
+	fixed bug 5985, we should use timestamps to determine which static
+	bookmarks to use.  Now we do.
+	
 2001-01-24  Mike Fleming  <mfleming@eazel.com>
 
 	reviewed by: <robey@eazel.com>
